--- a/.env-template
+++ b/.env-template
@@ -1,3 +1,3 @@
 VITE_CLIENT_SECRET="SECRET KEY"
 VITE_PAGE_ID=pageid
-VITE_AUTHORIZATION_URL="https://tc-alpha.allflow.cn/oauth/authorize?client_id=95aef2fb-35e8-4227-9ea3-9b6b80d65337&response_type=code&redirect_uri=http://localhost:3000/callback&scope=all&state=random_state"
+VITE_AUTHORIZATION_URL="https://api.flowus.cn/oauth/authorize?client_id=95aef2fb-35e8-4227-9ea3-9b6b80d65337&response_type=code&redirect_uri=http://localhost:3000/callback&scope=all&state=random_state"
